@@ -204,6 +204,8 @@ Bug Fixes
 
 * SOLR-16639: Fix jq parse error of solr-exporter metrics node_thread_pool_completed_total (Naoto Minami)
 
+* SOLR-16658: List of permissions returned to Admin UI is not complete (janhoy)
+
 Build
 ---------------------
 * Upgrade forbiddenapis to 3.4 (Uwe Schindler)
